pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: daytrader21
  name: daytrader21
spec:
  path:
    /daytrader
  port:
    targetPort: http
  to:
    kind: Service
    name: daytrader21
    weight: 100
